--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     annotationProcessor 'androidx.room:room-compiler:2.3.0'
     implementation 'com.google.code.gson:gson:2.10'
+    implementation 'com.opencsv:opencsv:4.6'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 }
