--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,10 +36,13 @@ dependencies {
     implementation 'androidx.room:room-common:2.3.0'
     implementation 'androidx.room:room-runtime:2.3.0'
     testImplementation 'junit:junit:4.13.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     annotationProcessor 'androidx.room:room-compiler:2.3.0'
     implementation 'com.google.code.gson:gson:2.10'
     implementation 'com.opencsv:opencsv:4.6'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+    testImplementation 'androidx.test:core:1.5.0'
 }
