Working on Bitmap

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,13 @@
         android:theme="@style/Theme.Stackify"
         tools:targetApi="31">
         <activity
+            android:name=".SolutionViewActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".SolutionLoadingActivity"
             android:exported="false">
             <meta-data
